--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "apidoc": {
-    "name": "example",
+    "name": "AthleteUnbound API",
     "version": "0.1.0",
-    "description": "apiDoc basic example"
+    "description": "The AthleteUnbound endpoints"
 
   },
   "author": "",
