implemented put heler, put requests work

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "name": "AthleteUnbound API",
     "version": "0.1.0",
     "description": "The AthleteUnbound endpoints"
-
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +19,7 @@
     "express": "^4.13.4",
     "jsonwebtoken": "^5.7.0",
     "mongoose": "^4.4.11",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "underscore": "^1.8.3"
   }
 }
